changes activity name

--- a/activity-ms/pom.xml
+++ b/activity-ms/pom.xml
@@ -11,8 +11,8 @@
     <groupId>mourad.micro</groupId>
     <artifactId>activity-ms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>activities-ms</name>
-    <description>activities-ms</description>
+    <name>activity-ms</name>
+    <description>activity-ms</description>
     <url/>
     <licenses>
         <license/>
