--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,7 +74,7 @@ services:
   config-server:
     build:
       context: ./config-server
-      dockerfile: Dockerfile-config-server
+      dockerfile: Dockerfile
     container_name: config-server
     restart: on-failure
     ports:
@@ -87,6 +87,7 @@ services:
   eureka-server:
     build:
       context: ./discovery-service
+      dockerfile: Dockerfile
     container_name: eureka-server
     restart: on-failure
     ports:
@@ -103,6 +104,7 @@ services:
   gateway-server:
     build:
       context: ./gateway-server
+      dockerfile: Dockerfile
     container_name: gateway-server
     restart: on-failure
     ports:
@@ -120,6 +122,7 @@ services:
   activity-ms:
     build:
       context: ./activity-ms
+      dockerfile: Dockerfile
     container_name: activity-ms
     restart: on-failure
     ports:
@@ -148,6 +151,7 @@ services:
   reservation-ms:
     build:
       context: ./reservation-ms
+      dockerfile: Dockerfile
     container_name: reservation-ms
     restart: on-failure
     ports:
